2006-07-04  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicMenuUI.java
	(installKeyboardActions): Implemented to call super. Nothing else
	needs to be done here.
	(setupPostTimer): Marked as unimplemented.
	(uninstallKeyboardActions): Implemented to call super. Nothing else
	needs to be done here.
	(mouseMoved): Removed TODO. Nothing to be done here.
	(ChangeHandler): Implemented.
	(menuDragMouseExited): Removed TODO. Nothing to be done here.
	(menuDragMouseReleased): Removed TODO. Nothing to be done here.
	(menuKeyReleased): Removed TODO. Nothing to be done here.
	(menuKeyTyped): Marked as unimplemented.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 28061
	* gnu/javax/swing/plaf/gnu/GNULookAndFeel.java
	(getDefaults): Set hash color to black.
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Set hash color to grey blue.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(instellDefaults): Set hash color.
	* javax/swing/plaf/metal/MetalIconFactory.java
	(TreeControlIcon.paint): Rewritten.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 28061
	* javax/swing/plaf/basic/BasicTreeUI.java (MouseHandler.mousePressed):
	Always cancel the current editing session before doing anything else,
	return immediately if this fails.
	(TreeHomeAction): Ensure that the lead selection path is visible after
	the action is performed. TreeIncrementAction: Likewise. TreeToggleAction:
	Likewise. TreeTraverseAction: Likewise.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 28061
	* javax/swing/plaf/basic/BasicTreeUI.java (MouseHandler.mousePressed):
	Returned back the code to handle the start of the click-pause-click
	editing initiation, explained about this code. 
	(TreeStartEditingAction): New inner class.
	(stopEditingInCompleteEditing): Explained about this field.
	(completeEditing(boolean, boolean, boolean): Only return early
	if there is no current editing session.